[tool.poetry]
name = "goit-pyweb-hw-11-fastapi"
version = "0.1.0"
description = ""
authors = ["MaksymSW <maksym.shvyedkin@gmail.com>"]
license = "MaxSW"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
